--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
 <body>
     <!-- header starts -->
  <header>
-     logo
-     menu
+    <div>logo</div> 
+    
+    <div>
+        features
+        testimonials
+        Try
+    </div>
  </header>
  <!-- header ends -->
 
