--- a/index.html
+++ b/index.html
@@ -1,52 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Andrea Page</title>
+
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
     <!-- header starts -->
  <header>
-    <div>logo</div> 
-    
+    <div><img src="https://www.ironhack.com/assets/icons/ironhack_logos/logo.svg" alt=""></div> 
     <div>
-        features
-        testimonials
-        Try
+        <ul>
+            <li>features</li>
+            <li>testimonials</li>
+            <li>try</li>
+        </ul>
     </div>
  </header>
  <!-- header ends -->
 
    <!-- hero starts -->
-    <div>
-        hero
-    </div>
+    <section>
+        <h1>Heading 1</h1>
+    </section>
    <!-- hero ends -->
 
 
      <!-- features starts -->
-     <div>
-        features
+     <section> <!-- row -->
+        <h3>features tittle</h3> <!-- row -->
+        <div> <!-- row -->
+            <div> <!-- col 1 -->
+                icon
+                <h4>text</h4>
+            </div> 
+
+            <div> <!-- col 1 -->
+                icon
+                <h4>text</h4>
+            </div> 
+
+            <div> <!-- col 1 -->
+                icon
+                <h4>text</h4>
+            </div> 
+       
     </div>
    <!-- features ends -->
 
 
       <!-- testimonials starts -->
-      <div>
-        testimonials
-    </div>
+      <section>
+        <div>    <!-- testimonial 1 -->
+          <h2>text</h2>
+          <img src="" alt="">
+        </div>
+
+        <div>  <!-- testimonial 2 -->
+            <h2>text</h2>
+            <img src="" alt="">
+        </div>
+
+        <div>  <!-- testimonial 3 -->
+            <h2>text</h2>
+            <img src="" alt="">
+        </div>
+      </section>
    <!-- testimonials ends -->
 
 
        <!--  newsletters starts -->
-       <div>
-        newsletters
-    </div>
+       <section>
+        <h3>Newsletter</h3> 
+        <div>
+            name
+            email
+            send button 
+        </div> 
+       </section>
    <!--  newsletters ends -->
 
+   <!--  footer starts -->
    <footer>
-       footer
+    <div>
+        <img src="https://www.ironhack.com/assets/icons/ironhack_logos/logo.svg" alt="">
+    </div> 
+    <div>
+        <p>menu on footer</p> 
+    </div>
    </footer>
+   <!--  footer ends -->
 </body>
 </html>
