--- a/index.html
+++ b/index.html
@@ -6,8 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Andrea Page</title>
 
+    <!-- Fonts starts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com"> 
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;500&display=swap" rel="stylesheet">
+
+     <!-- CSS starts -->
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+
+    <!-- JavaScript -->
+    <script src=“https://kit.fontawesome.com/bff7ea3e36.js” crossorigin=“anonymous”></script>
 </head>
 <body>
     <!-- header starts -->
@@ -32,10 +40,10 @@
 
      <!-- features starts -->
      <section> <!-- row -->
-        <h3>features tittle</h3> <!-- row -->
+        <h3>features title</h3> <!-- row -->
         <div> <!-- row -->
             <div> <!-- col 1 -->
-                icon
+                <i class="fas fa-ad"></i>
                 <h4>text</h4>
             </div> 
 
