--- a/index.html
+++ b/index.html
@@ -15,79 +15,89 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
     <!-- JavaScript -->
-    <script src=“https://kit.fontawesome.com/bff7ea3e36.js” crossorigin=“anonymous”></script>
+    <script src="https://kit.fontawesome.com/bff7ea3e36.js"  crossorigin=“anonymous”></script>
 </head>
 <body>
     <!-- header starts -->
  <header>
-    <div><img src="https://www.ironhack.com/assets/icons/ironhack_logos/logo.svg" alt=""></div> 
+    <div><img src="https://www.ironhack.com/assets/icons/ironhack_logos/logo.svg" alt="" class="logoheader"></div> 
     <div>
         <ul>
-            <li>features</li>
-            <li>testimonials</li>
-            <li>try</li>
+            <li> <a href="#features">features</a></li>
+            <li><a href="#testimonial">testimonials</a></li>
+            <li><a href="#trial">try</a></li>
         </ul>
     </div>
  </header>
  <!-- header ends -->
 
    <!-- hero starts -->
-    <section>
+    <section id="hero">
         <h1>Heading 1</h1>
     </section>
    <!-- hero ends -->
 
 
      <!-- features starts -->
-     <section> <!-- row -->
-        <h3>features title</h3> <!-- row -->
-        <div> <!-- row -->
-            <div> <!-- col 1 -->
-                <i class="fas fa-ad"></i>
+     <section id="features"> <!-- row -->
+        <h3 class="color_headings">Features</h3> <!-- row -->
+        <div class="row-features "> <!-- row -->
+            <div class="col col-features"> <!-- col 1 -->
+                <i class="fas fa-ad fa-4x"></i>
                 <h4>text</h4>
             </div> 
 
-            <div> <!-- col 1 -->
-                icon
+            <div class="col col-features"> <!-- col 1 -->
+                <i class="fab fa-amazon-pay fa-4x"></i>
                 <h4>text</h4>
             </div> 
 
-            <div> <!-- col 1 -->
-                icon
+            <div class="col col-features"> <!-- col 1 -->
+                <i class="fab fa-amazon-pay fa-4x"></i>
                 <h4>text</h4>
             </div> 
-       
-    </div>
+        </div>
+    </section>
    <!-- features ends -->
 
 
       <!-- testimonials starts -->
       <section>
-        <div>    <!-- testimonial 1 -->
-          <h2>text</h2>
-          <img src="" alt="">
+        <div class="col col-testimonial">    <!-- testimonial 1 -->
+            <img src="img/1.jpg" alt="" class="avatar"> 
+            <h2>This tutorial will show you how to parse long Markdown text to HTML</h2>
+          <h5>Ben</h5>
         </div>
 
-        <div>  <!-- testimonial 2 -->
-            <h2>text</h2>
-            <img src="" alt="">
+        <div class="col col-testimonial">  <!-- testimonial 2 -->
+            <img src="img/2.jpg" alt="" class="avatar">
+            <h2>This tutorial will show you how to parse long Markdown text to HTML</h2>
+            <h5>Ben</h5>
         </div>
 
-        <div>  <!-- testimonial 3 -->
-            <h2>text</h2>
-            <img src="" alt="">
+        <div class="col col-testimonial">  <!-- testimonial 3 -->
+            <img src="img/3.jpg" alt="" class="avatar">
+            <h2>This tutorial will show you how to parse long Markdown text to HTML</h2>
+            <h5>Ben</h5>
         </div>
       </section>
    <!-- testimonials ends -->
 
 
        <!--  newsletters starts -->
-       <section>
+       <section id="trial">
         <h3>Newsletter</h3> 
-        <div>
-            name
-            email
-            send button 
+        <div class="row-trial">
+            <form action="#">
+                 <label for="Name">Name</label>
+                 <input type="text" placeholder="Typer your name" id="name"> 
+                 <label for="Email">Email</label>
+                 <input type="email" placeholder=" Type your email" id="email">
+                 <input type="submit">
+              </form>
+           
+
+
         </div> 
        </section>
    <!--  newsletters ends -->
