--- a/index.html
+++ b/index.html
@@ -103,13 +103,17 @@
    <!--  newsletters ends -->
 
    <!--  footer starts -->
-   <footer>
+   <footer
+    <div>
+        <ul>
+            <li> <a href="#features">features</a></li>
+            <li><a href="#testimonial">testimonials</a></li>
+            <li><a href="#trial">try</a></li>
+        </ul>
+    </div>
     <div>
         <img src="https://www.ironhack.com/assets/icons/ironhack_logos/logo.svg" alt="">
     </div> 
-    <div>
-        <p>menu on footer</p> 
-    </div>
    </footer>
    <!--  footer ends -->
 </body>
