--- a/index.html
+++ b/index.html
@@ -103,15 +103,15 @@
    <!--  newsletters ends -->
 
    <!--  footer starts -->
-   <footer
-    <div>
+   <footer>
+    <div class="row-footer">
         <ul>
             <li> <a href="#features">features</a></li>
             <li><a href="#testimonial">testimonials</a></li>
             <li><a href="#trial">try</a></li>
         </ul>
     </div>
-    <div>
+    <div class="row-footer">
         <img src="https://www.ironhack.com/assets/icons/ironhack_logos/logo.svg" alt="">
     </div> 
    </footer>
